--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,7 +3,7 @@ $lite-background: #fff;
 $box-shadow: 2px 5px 25px -3px rgba(180, 180, 180, 0.25);
 $border-radius: 20px;
 
-$lite-color: rgb(136, 75, 75);
+$lite-color: #000;
 $dark-color: #fff;
 $base-color: #939cb0;
 
