--- a/src/pages/Home/components/ThisDay/ThisDay.module.scss
+++ b/src/pages/Home/components/ThisDay/ThisDay.module.scss
@@ -37,3 +37,21 @@
     font-size: 25px;
   }
 }
+
+@media screen and (max-width : 1280px) {
+  .this__day {
+    max-width: 1200px;
+  }
+
+  .top__block {
+    // display: flex;
+    // justify-content: space-between;
+    // align-items: center;
+    // width: 100%;
+    // margin-bottom: 30px;
+    svg {
+      width: 200px;
+      height: 200px;
+    }
+  }
+}
