--- a/src/pages/Home/components/ThisDayInfo/ThisDayInfo.module.scss
+++ b/src/pages/Home/components/ThisDayInfo/ThisDayInfo.module.scss
@@ -68,9 +68,14 @@
   }
 
   .item {
-    .indicator {
-        width: 30px;
-        height: 30px;
+      .indicator {
+          width: 30px;
+          height: 30px;
+        }
+
+      .indicator__name,
+      .indicator__value {
+        font-size: 12px;
       }
 
       .indicator__value {
