теперь смена городов работает + рабочий popup при нажатии на карточку с погодой, скрыт API ключ

--- a/src/pages/Home/components/ThisDayInfo/ThisDayInfo.module.scss
+++ b/src/pages/Home/components/ThisDayInfo/ThisDayInfo.module.scss
@@ -1,4 +1,4 @@
-@import '../../../../styles/variables.scss';
+@import "../../../../styles/variables.scss";
 
 .this__day_info {
   position: relative;
@@ -8,6 +8,7 @@
   box-shadow: $box-shadow;
   border-radius: $border-radius;
   background: var(#{--components-background-default});
+  z-index: -1;
 }
 
 .item {
@@ -16,11 +17,11 @@
   flex-wrap: wrap;
   align-items: center;
   margin-bottom: 25px;
-  z-index: 1;
+  z-index: -1;
   &:last-of-type {
     margin-bottom: 0;
   }
-  
+
   .indicator,
   .indicator__name {
     margin-right: 20px;
@@ -30,7 +31,7 @@
     width: 38px;
     height: 38px;
     display: flex;
-    
+
     align-items: center;
     justify-content: center;
     background-color: #fff;
@@ -57,37 +58,7 @@
   right: 0;
 }
 
-@media screen and (max-width : 800px) {
-  .cloud__img {
-    display: none;
-  }
-
-  .this__day_info {
-    margin-top: 20px;
-    padding: 20px;
-  }
-
-  .item {
-      .indicator {
-          width: 30px;
-          height: 30px;
-        }
-
-      .indicator__name,
-      .indicator__value {
-        font-size: 12px;
-      }
-
-      .indicator__value {
-        position: absolute;
-        width: 50%;
-        right: 0;
-    }
-  }
-  
-}
-
-@media screen and (max-width : 1280px) {
+@media screen and (max-width: 800px) {
   .cloud__img {
     display: none;
   }
@@ -99,15 +70,43 @@
 
   .item {
     .indicator {
-        width: 30px;
-        height: 30px;
-      }
+      width: 30px;
+      height: 30px;
+    }
 
-      .indicator__value {
-        position: absolute;
-        width: 50%;
-        right: 0;
+    .indicator__name,
+    .indicator__value {
+      font-size: 12px;
+    }
+
+    .indicator__value {
+      position: absolute;
+      width: 50%;
+      right: 0;
     }
   }
-  
+}
+
+@media screen and (max-width: 1280px) {
+  .cloud__img {
+    display: none;
+  }
+
+  .this__day_info {
+    margin-top: 20px;
+    padding: 20px;
+  }
+
+  .item {
+    .indicator {
+      width: 30px;
+      height: 30px;
+    }
+
+    .indicator__value {
+      position: absolute;
+      width: 50%;
+      right: 0;
+    }
+  }
 }
